--- a/application/views/scripts/commission/partials/partial-ligne-membre-commission.phtml
+++ b/application/views/scripts/commission/partials/partial-ligne-membre-commission.phtml
@@ -5,11 +5,11 @@
             <input type='hidden' name='ID_COMMISSIONMEMBRE[]' value='<?php echo $this->id_membre ?>' />
 
             <!-- Libellé du membre-->
-            <input type='text' name='<?php echo $this->id_membre ?>_LIBELLE_COMMISSIONMEMBRE' value='<?php echo htmlspecialchars($this->libelle, ENT_QUOTES) ?>' />
+            <input class="form-control" type='text' name='<?php echo $this->id_membre ?>_LIBELLE_COMMISSIONMEMBRE' value='<?php echo htmlspecialchars($this->libelle, ENT_QUOTES) ?>' />
             <br/>
 
             <!-- Obligatoire / facultatif / pour information -->
-            <select name='<?php echo $this->id_membre ?>_PRESENCE_COMMISSIONMEMBRE' >
+            <select class="form-control" name='<?php echo $this->id_membre ?>_PRESENCE_COMMISSIONMEMBRE' >
                 <option value='0' >Membre Obligatoire</option>
                 <option value='1' <?php if($this->presence == 1) echo "selected" ?>>Membre Facultatif</option>
                 <option value='2' <?php if($this->presence == 2) echo "selected" ?>>Membre Pour information</option>
@@ -19,21 +19,21 @@
 
             <!-- Type de membre -->
             <p>
-                <select name='<?php echo $this->id_membre ?>_typemembre'>
+                <select class="form-control mb-4" name='<?php echo $this->id_membre ?>_typemembre'>
                     <option value='1' >Groupement de commune</option>
                     <option value='2' <?php if($this->contact != null) echo "selected" ?> >Contact de la commission</option>
                     <option value='3' <?php if($this->groupement == null && $this->contact == null) echo "selected" ?> >Commune</option>
                 </select>
 
                 <!-- Groupement de commune -->
-                <span class='<?php echo $this->id_membre ?>_type-membre <?php echo $this->id_membre ?>_type-membre-groupement <?php if (null != $this->groupement && is_array($this->groupement)) { if(array_key_exists('ID_GROUPEMENT', $this->groupement) && $this->groupement["ID_GROUPEMENT"] == null) { echo "ui-helper-hidden"; } } ?>' >
-                    <?php echo $this->listeGroupement($this->groupement, array("name" => $this->id_membre . "_ID_GROUPEMENT")); ?>
+                <span class='<?php echo $this->id_membre ?>_type-membre <?php echo $this->id_membre ?>_type-membre-groupement <?php if (null != $this->groupement && is_array($this->groupement)) { if(array_key_exists('ID_GROUPEMENT', $this->groupement) && $this->groupement["ID_GROUPEMENT"] == null) { echo "ui-helper-hidden"; } } ?>'>
+                    <?php echo $this->listeGroupement($this->groupement, array("name" => $this->id_membre . "_ID_GROUPEMENT", "class" => "form-control")); ?>
                 </span>
 
                 <!-- Liste des contacts -->
                 <?php if(count($this->contacts) > 0 ) : ?>
-                <span class='<?php echo $this->id_membre ?>_type-membre <?php echo $this->id_membre ?>_type-membre-contact <?php if($this->contact["ID_UTILISATEURINFORMATIONS"] == null) echo "ui-helper-hidden" ?>' >
-                    <select name='<?php echo $this->id_membre . "_ID_UTILISATEURINFORMATIONS" ?>' >
+                <span class='<?php echo $this->id_membre ?>_type-membre <?php echo $this->id_membre ?>_type-membre-contact <?php if($this->contact["ID_UTILISATEURINFORMATIONS"] == null) echo "ui-helper-hidden" ?>'>
+                    <select class="form-control" name='<?php echo $this->id_membre . "_ID_UTILISATEURINFORMATIONS" ?>'>
                         <?php foreach( $this->contacts as $row_contact ) : ?>
                         <option value='<?php echo $row_contact["ID_UTILISATEURINFORMATIONS"] ?>' <?php if($this->contact == $row_contact["ID_UTILISATEURINFORMATIONS"]) echo "selected" ?> ><?php echo $row_contact["NOM_UTILISATEURINFORMATIONS"] . " " . $row_contact["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
                         <?php endforeach ?>
@@ -42,13 +42,10 @@
                 <?php endif ?>
 
                 <script>
-
                     $("select[name=<?php echo $this->id_membre ?>_typemembre]").change(function() {
-
                         $(".<?php echo $this->id_membre ?>_type-membre").hide();
 
                         switch( $(this).val() ) {
-
                             case "1":
                                 $(".<?php echo $this->id_membre ?>_type-membre-groupement").show();
                                 break;
@@ -58,7 +55,6 @@
                                 break;
                         }
                     }).change();
-
                 </script>
             </p>
         </div>
@@ -116,15 +112,11 @@
 	<!-- Le type de dossier -->
 	<td class='checkbox_area' >
 		<div class='inner_scroll'>
-
             <ul class='list-unstyled'>
-
                 <input type="hidden" name="type_membre_value" value="<?php echo $this->id_membre ?>" />
 
                 <?php foreach( $this->dossiertypes as $dossiertype ) : ?>
-
                     <li>
-
                     	<input name='<?php echo $this->id_membre ?>_ID_DOSSIERTYPE[]' type='checkbox' value='<?php echo $dossiertype["ID_DOSSIERTYPE"] ?>' <?php if( $dossiertype["ID_COMMISSIONMEMBRE"] != null ) echo "checked" ?> onclick="if($(this).attr('checked')) $(this).next('ul').find('input').attr('checked', true); else $(this).next('ul').find('input').removeAttr('checked');" />
 
                     	<?php echo $dossiertype["LIBELLE_DOSSIERTYPE"] ?>
@@ -139,13 +131,9 @@
 								<?php endif ?>
 							<?php endforeach ?>
 						</ul>
-
                     </li>
-
                 <?php endforeach ?>
-
             </ul>
-
 		</div>
 	</td>
 
