--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -32,102 +32,119 @@
     <div style='clear: both'></div>
 </div>
 
-<?php if( !$this->ajax) : ?>
-	<div id='dialog-delete-contact' class='ui-helper-hidden' >
-		<p>
-			<span class="ui-icon ui-icon-alert" style="float:left; margin: 0 7px 20px 0;"></span>
-			Voulez vous vraiment supprimer ce contact ?
-		</p>
-	</div>
+<?php if (!$this->ajax) : ?>
+    <!-- Ajout d'un contact -->
+	<div class="modal fade" id="dialog-add-contact" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title">Ajout d'un contact</h3>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    <button id="modal-add-contact" type="button" class="btn btn-success">Ajouter</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	<div id='dialog-add-contact'></div>
-	<div id='dialog-add-contact-existant'>
-		<dl>
-			<dt>Nom du contact</dt>
-			<dd>
-				<input type="text" id="nom_contact_existant" />
-			</dd>
-		</dl>
-	</div>
+    <!-- Edition d'un contact -->
+    <div class="modal fade" id="dialog-edit-contact" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title">Modification d'un contact</h3>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    <button id="edit-contact" type="button" class="btn btn-success">Modifier</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Ajout d'un contact existant -->
+    <div class="modal fade" id="dialog-add-contact-existant" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title">Ajout d'un contact existant</h3>
+                </div>
+                <div class="modal-body">
+                    <label>Nom du contact</label>
+                    <input class="form-control" type="text" id="nom_contact_existant" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Suppression d'un contact -->
+    <div class="modal fade" id="dialog-delete-contact" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title">Suppression d'un contact</h3>
+                </div>
+                <div class="modal-body">
+                    Voulez-vous vraiment supprimer ce contact ?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    <button id="delete-contact" type="button" class="btn btn-danger">Supprimer</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 	<script type="text/javascript">
 		// Suppression d'un contact
 		$("a.contact-delete").live("click", function() {
 			var a = this;
-			$("#dialog-delete-contact").dialog({
-				title: "Confirmation de suppression",
-				autoOpen: true,
-				autoResize: true,
-				width: "auto",
-				position: 'center',
-				draggable: false,
-				resizable: false,
-				buttons: [
-                    {
-                        text: 'Supprimer',
-                        class: 'btn btn-danger',
-                        click: function() {
-                            $.ajax({
-                                url: a.href + "&format=json",
-                                type: "POST",
-                                success: function () {
-                                    $(a).parents(".fiche_contact").remove();
-                                    $( "#dialog-delete-contact" ).dialog( "destroy" );
-                                }
-                            });
-                        }
-                    },
-                    {
-                        text: 'Annuler',
-                        class: 'btn',
-                        click: function() {
-                            $( "#dialog-delete-contact" ).dialog( "destroy" );
-                        }
+
+            $('#dialog-delete-contact').modal("show")
+            $('#delete-contact').click(function() {
+                $.ajax({
+                    url: a.href + "&format=json",
+                    type: "POST",
+                    success: function () {
+                        $(a).parents(".fiche_contact").remove();
+                        $("#dialog-delete-contact").modal("hide");
                     }
-                ]
-			});
+                });
+            })
 			return false;
 		});
 
 		// Ajout d'un contact
 		$("a#add-contact").live("click", function() {
 			var a = this;
+
+            $("#dialog-add-contact").modal('show')
 			$.ajax({
 				url: a.href + "&format=html",
 				success: function(result) {
-					$("#dialog-add-contact").html('').append(result).dialog({
-						title: "Ajout d'un contact",
-						height: 350,
-						width: 800,
-						draggable: false,
-						resizable: false,
-						buttons: [
-                            {
-                                text: 'Ajouter',
-                                class: 'btn btn-success',
-                                click: function() {
-                                    $.ajax({
-                                        url: "/contact/add?format=json",
-                                        data: $("#formulaire_contact").serialize(),
-                                        type: "POST",
-                                        success: function () {
-                                            $('#dialog-add-contact').dialog("destroy");
-                                            $('#dialog-add-contact').hide();
-                                            $("#contact-content-ajax").load("/contact?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>&ajax=1");
-                                        }
-                                    });
-                                }
-                            },
-                            {
-                                text: 'Annuler',
-                                class: 'btn',
-                                click: function() {
-                                    $("#dialog-add-contact").dialog( "destroy" );
-                                    $('#dialog-add-contact').html('');
-                                }
+                    $('#dialog-add-contact .modal-body').html(result)
+
+                    $("#modal-add-contact").click(function() {
+                        $.ajax({
+                            url: "/contact/add?format=json",
+                            data: $("#dialog-add-contact #formulaire_contact").serialize(),
+                            type: "POST",
+                            success: function () {
+                                $('#dialog-add-contact').modal("hide");
+                                $("#contact-content-ajax").load("/contact?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>&ajax=1");
                             }
-                        ]
-					});
+                        });
+                    })
 				}
 			});
 			return false;
@@ -136,70 +153,33 @@
 		// Edition d'un contact
 		$(".fiche_edit a").live("click", function() {
 			var a = this;
+
+            $("#dialog-edit-contact").modal('show')
 			$.ajax({
 				url: a.href + "&format=html",
 				success: function(result) {
-					$("#dialog-add-contact").html('').append(result).dialog({
-						title: "Modification d'un contact",
-						height: 350,
-						width: 650,
-						draggable: false,
-						resizable: false,
-						buttons: [
-                            {
-                                text: 'Modifier',
-                                class: 'btn btn-success',
-                                click: function() {
-                                    $.ajax({
-                                        url: "/contact/edit",
-                                        data: $("#dialog-add-contact #formulaire_contact").serialize(),
-                                        type: "POST",
-                                        success: function () {
-                                            $('#dialog-add-contact').dialog("destroy");
-                                            $("#contact-content-ajax").load("/contact?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>&ajax=1");
-                                        }
-                                    });
+                    $("#dialog-edit-contact .modal-body").html(result)
 
-                                    $("#dialog-add-contact").html('');
-                                }
-                            },
-                            {
-                                text: 'Annuler',
-                                class: 'btn',
-                                click: function() {
-                                    $("#dialog-add-contact").dialog( "destroy" );
-                                    $("#dialog-add-contact").html('');
-                                }
+                    $('#edit-contact').click(function() {
+                        $.ajax({
+                            url: "/contact/edit",
+                            data: $("#dialog-edit-contact #formulaire_contact").serialize(),
+                            type: "POST",
+                            success: function () {
+                                $("#dialog-edit-contact").modal('hide')
+                                $("#contact-content-ajax").load("/contact?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>&ajax=1");
                             }
-                        ]
-					});
+                        });
+                    })
 				}
 			});
 			return false;
 		});
 
-		// Ajout d'un contact existant
-		$("#dialog-add-contact-existant").dialog({
-			autoOpen: false,
-			title: "Ajout d'un contact existant",
-			height: 'auto',
-			width: 650,
-			resizable: false,
-			buttons: [
-                {
-                    text: 'Annuler',
-                    class: 'btn',
-                    click: function() {
-                        $('#dialog-add-contact-existant').dialog("close");
-                    }
-                }
-            ]
-		});
-
 		$("a#add-contact-existant").click(function() {
-			$('#dialog-add-contact-existant').dialog("open");
-			$('#dialog-add-contact-existant input').val("");
-			return false;
+            $("#nom_contact_existant").val('')
+			$('#dialog-add-contact-existant').modal("show");
+            return false;
 		});
 
 		$("#nom_contact_existant").autocomplete("/contact/get?format=json", {
@@ -230,7 +210,7 @@
 				},
 				type: "POST",
 				success: function () {
-					$('#dialog-add-contact-existant').dialog("close");
+					$('#dialog-add-contact-existant').modal("hide");
 					$("#contact-content-ajax").load("/contact?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>&ajax=1");
 				}
 			});
