--- a/application/views/scripts/gestion-des-commissions/form.phtml
+++ b/application/views/scripts/gestion-des-commissions/form.phtml
@@ -2,18 +2,18 @@
 	<ul id="ul-gdc" class="list-unstyled">
 		<?php foreach($this->rowset_commissions as $row_commission) : ?>
 		<li class="row mb-4">
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <input type="hidden" name="id_commission[]" value="<?php echo $row_commission["ID_COMMISSION"] ?>" />
                 <input class="form-control" type="text" size="50" name="nom_commission[]" value="<?php echo $row_commission["LIBELLE_COMMISSION"] ?>" />
             </div>
-            <div class="col-md-5">
+            <div class="col-sm-5">
                 <select class="form-control" name="idtype_commission[]">
                     <?php foreach($this->rowset_typesDesCommissions as $row_typeDesCommissions) : ?>
                     <option value="<?php echo $row_typeDesCommissions["ID_COMMISSIONTYPE"] ?>" <?php if($row_typeDesCommissions["ID_COMMISSIONTYPE"] == $row_commission["ID_COMMISSIONTYPE"]) echo "selected" ?>><?php echo $row_typeDesCommissions["LIBELLE_COMMISSIONTYPE"] ?></option>
                     <?php endforeach ?>
                 </select>
             </div>
-            <div class="col-md-1">
+            <div class="col-sm-1">
                 <a href="/commission/delete?id=<?php echo $row_commission["ID_COMMISSION"] ?>" class="delete-gdc">&times;</a>
             </div>
 		</li>
@@ -24,11 +24,11 @@
 <p>Note: Les suppressions sont définitives.</p>
 <ul class="ui-helper-hidden">
 	<li class="row mb-4" id="prototype-gdc" >
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <input type="hidden" name="id_commission[]" value="0" />
             <input class="form-control" type="text" size="50" name="nom_commission[]" />
         </div>
-        <div class="col-md-5">
+        <div class="col-sm-5">
             <select class="form-control" name="idtype_commission[]">
                 <?php foreach($this->rowset_typesDesCommissions as $row_typeDesCommissions) : ?>
                 <option value="<?php echo $row_typeDesCommissions["ID_COMMISSIONTYPE"] ?>" ><?php echo $row_typeDesCommissions["LIBELLE_COMMISSIONTYPE"] ?></option>
