--- a/application/views/scripts/etablissement/add-contact-existant.phtml
+++ b/application/views/scripts/etablissement/add-contact-existant.phtml
@@ -1,28 +1,28 @@
-<form class="modal contact" action='<?php echo $this->url(array('action' => 'add-contact-existant')) ?>' method='post' >
+<form class="modal fade contact" tabindex="-1" role="dialog" action='<?php echo $this->url(array('action' => 'add-contact-existant')) ?>' method='post'>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">Ajouter un contact existant</h3>
+            </div>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Ajouter un contact existant</h3>
+            <div class="modal-body" style='min-height: 100px;overflow-y:visible'>
+                <p class='text-center'>
+                    <input type='text' name='autocomplete-ignoreit' placeholder='Nom du contact à ajouter ...' />
+                </p>
+
+                <p id='bloc-contact-existant' class='text-center lead'>
+                    <span class='text-muted'>Aucun contact selectionné</span>
+                    <input type='hidden' name='id_contact' />
+                </p>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
+            </div>
+        </div>
     </div>
-
-    <div class="modal-body" style='min-height: 100px;overflow-y:visible'>
-
-            <p class='text-center'>
-	    	<input type='text' name='autocomplete-ignoreit' placeholder='Nom du contact à ajouter ...' />
-	    </p>
-
-	    <p id='bloc-contact-existant' class='text-center lead'>
-	    	<span class='text-muted'>Aucun contact selectionné</span>
-	    	<input type='hidden' name='id_contact' />
-	    </p>
-
-    </div>
-
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
-        <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
-    </div>
-
 </form>
 
 <script>
