--- a/application/views/scripts/commission/documents.phtml
+++ b/application/views/scripts/commission/documents.phtml
@@ -8,7 +8,7 @@
 
 	<tbody>
 		<tr>
-			<td style='text-align: center;' >
+			<td class="text-center">
 				<p style='line-height: 37px; padding-top: 16px;' >
 					<?php if($this->name_document_cr != null) : ?>
 						<span><img src='/images/file.gif' alt='' /></span>
@@ -22,12 +22,12 @@
 						<strong>Aucun document défini.</strong>
 					<?php endif ?>
 				</p>
-				<p>
+                <div style="display: flex; justify-content: center;">
 					<form class='courrier' action='/commission/add-document' enctype='multipart/form-data' method='post' target='iframe' >
 						<input id='add-file' type='file' name='COURRIER' />
 						<input type='hidden' name='id_commission' value='<?php echo $_GET["id_commission"] ?>' />
 					</form>
-				</p>
+                    </div>
 			</td>
 		</tr>
 	</tbody>
@@ -36,19 +36,15 @@
 <iframe id='iframe' name="iframe" marginheight="0" marginwidth="0" height="0" width="0" hidden></iframe>
 
 <script type="text/javascript">
-
 	// Callback
 	function callback(error) {
-
 		if(error != 'null') {
-
 			alert(error);
 		}
 		else {
-
 			// On recharge l'onglet
 			var current_index = $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs("option","active");
-                $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs('load',current_index);
+            $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs('load',current_index);
 		}
 	}
 
@@ -59,13 +55,11 @@
 
 	// Gestion de la suppression d'un courrier
 	$("a.delete-courrier").click(function() {
-
 		var a = this;
 
 		$.ajax({
 			url: a.href,
 			success: function(result) {
-
 				var current_index = $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs("option","active");
                 $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs('load',current_index);
 			}
@@ -73,5 +67,4 @@
 
 		return false;
 	});
-
 </script>
